syntax = "proto3";

option csharp_namespace = "WebStore.API";

service ClientServiceGRPS {
  rpc Registration (ClientRequest) returns (BoolReply);
}

message ClientRequest {
  int32 Id = 1;
  string Mail = 2;
  string FullName = 3;
  string Phone = 4;
  string Password = 5;
}

message BoolReply{
	bool isSuccess = 1;
}
